corrected images path

--- a/AvioProWeb/AvioProWeb/Views/Category/AerospaceTapes.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Category/AerospaceTapes.cshtml
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="col col-12 col-md-12 col-lg-12 p-lg-3 p-md-3 bg-light-gray mb-5">
                             <p class="font-14 mb-0">PRODUCTS BY </p>
-                            <img src="./3M Aerospace Tapes &amp; Adhesives_files/5846-3M-logo (2).png" alt="3M" width="150px">
+                            <img src="~/images/5846-3M-logo (2).png" alt="3M" width="150px">
                         </div>
 
 
