--- a/AvioProWeb/AvioProWeb/Views/Category/Electronic_Cleaners.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Category/Electronic_Cleaners.cshtml
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="col col-12 col-md-12 col-lg-12 p-lg-3 p-md-3 bg-light-gray mb-5">
                             <p class="font-14 mb-0">PRODUCTS BY </p>
-                            <img src="./Electronic Cleaners_files/4325-lps-logo.png" alt="LPS" width="150px">
+                            <img src="~/images/4325-lps-logo.png" alt="LPS" width="150px">
                         </div>
 
 
