--- a/AvioProWeb/AvioProWeb/Views/Shared/LPS_2NoFlashCleaners.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/LPS_2NoFlashCleaners.cshtml
@@ -18,7 +18,7 @@
                         <div class="col col-12 col-md-3 col-lg-3 pl-0 pl-md-0 pr-0 pr-md-3 ">
                             <div class="bg-light-gray mb-3 p-3">
                                 <p class="font-14 mb-0">OTHER PRODUCTS BY </p>
-                                <img src="./NoFlash 2.0 Electro Contact Cleaner_files/4325-lps-logo.png" class="img-fluid" alt="LPS" title="LPS">
+                                <img src="~/images/4325-lps-logo.png" class="img-fluid" alt="LPS" title="LPS">
                             </div>
                             <div class="bg-light-gray mb-5">
                                 <div class="container p-0">
@@ -96,7 +96,7 @@
 
                                 <div class="row row-eq-height">
                                     <div class="col-12 col-md-5 mb-4 mb-md-0">
-                                        <img src="./NoFlash 2.0 Electro Contact Cleaner_files/no-image.png" title="NoFlash 2.0 Electro Contact Cleaner" alt="NoFlash 2.0 Electro Contact Cleaner" class="w-100">
+                                        <img src="~/images/no-image.png" title="NoFlash 2.0 Electro Contact Cleaner" alt="NoFlash 2.0 Electro Contact Cleaner" class="w-100">
                                     </div>
                                     <div class="col-12 col-md-7 p-md-5 d-flex align-items-center">
                                         <ul>
