--- a/AvioProWeb/AvioProWeb/Views/Shared/Promoters_3MPromoters130.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/Promoters_3MPromoters130.cshtml
@@ -18,7 +18,7 @@
                         <div class="col col-12 col-md-3 col-lg-3 pl-0 pl-md-0 pr-0 pr-md-3 ">
                             <div class="bg-light-gray mb-3 p-3">
                                 <p class="font-14 mb-0">OTHER PRODUCTS BY </p>
-                                <img src="./3M™ Surface Pre-Treatment AC-130-2_files/5846-3M-logo (2).png" class="img-fluid" alt="3M" title="3M">
+                                <img src="~/images/5846-3M-logo (2).png" class="img-fluid" alt="3M" title="3M">
                             </div>
                             <div class="bg-light-gray mb-5">
                                 <div class="container p-0">
@@ -249,7 +249,7 @@
 
                                 <div class="row row-eq-height">
                                     <div class="col-12 col-md-5 mb-4 mb-md-0">
-                                        <img src="./3M™ Surface Pre-Treatment AC-130-2_files/no-image.png" title="3M™ Surface Pre-Treatment AC-130-2" alt="3M™ Surface Pre-Treatment AC-130-2" class="w-100">
+                                        <img src="~/images/no-image.png" title="3M™ Surface Pre-Treatment AC-130-2" alt="3M™ Surface Pre-Treatment AC-130-2" class="w-100">
                                     </div>
                                     <div class="col-12 col-md-7 p-md-5 d-flex align-items-center">
                                     </div>
