Finalized add to cart in 3M Tapes

--- a/AvioProWeb/AvioProWeb/Views/Shared/Tapes_3mscotchweldepoxyadhesiveec1469.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/Tapes_3mscotchweldepoxyadhesiveec1469.cshtml
@@ -264,10 +264,14 @@
                                         <label class="col-sm-3 col-form-label">1 GALLON</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="59" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="59" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-1469", Brand="3M", Name="3M™ Scotch-Weld™ Epoxy Adhesive EC-1469", Units="1 GALLON" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
+
                                         </div>
                                     </div>
 
@@ -323,10 +327,14 @@
                                         <label class="col-sm-3 col-form-label">1 PINT</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="59" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="59" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-1469", Brand="3M", Name="3M™ Scotch-Weld™ Epoxy Adhesive EC-1469", Units="1 PINT" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
+
                                         </div>
                                     </div>
 
@@ -382,10 +390,14 @@
                                         <label class="col-sm-3 col-form-label">250 ML TUBE</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="59" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="59" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-1469", Brand="3M", Name="3M™ Scotch-Weld™ Epoxy Adhesive EC-1469", Units="250 ML TUBE" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
+
                                         </div>
                                     </div>
 
