--- a/AvioProWeb/AvioProWeb/Views/Shared/_Layout.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/_Layout.cshtml
@@ -86,12 +86,13 @@
                                     </li>
 
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="http://aviopro.ideabox.online/#" role="button" aria-haspopup="true" aria-expanded="false">BRAND WE OFFER</a>
+                                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">BRAND WE OFFER</a>
 
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item text-uppercase" href="http://aviopro.ideabox.online/brand/3m">3M</a>
-                                            <a class="dropdown-item text-uppercase" href="http://aviopro.ideabox.online/brand/lps">LPS</a>
-                                            <a class="dropdown-item text-uppercase" href="http://aviopro.ideabox.online/brand/aeroshell">Aeroshell</a>
+                                            <a class="dropdown-item text-uppercase" href="@Url.Action("Index","Brand",new {Params="ThreeM"})">3M</a>
+
+                                            <a class="dropdown-item text-uppercase" href="@Url.Action("Index","Brand",new {Params="LPS"})">LPS</a>
+                                            <a class="dropdown-item text-uppercase" href="@Url.Action("Index","Brand",new {Params="AEROSHELL"})">Aeroshell</a>
                                         </div>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
