--- a/AvioProWeb/AvioProWeb/Views/Shared/Promoters_3MPromoters3960.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/Promoters_3MPromoters3960.cshtml
@@ -264,10 +264,13 @@
                                         <label class="col-sm-3 col-form-label">1 GALLON</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="16" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="16" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-3960", Brand="3M", Name="3M™ Scotch-Weld™ Structural Adhesives Primer EC-3960", Units="1 GALLON" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
                                         </div>
                                     </div>
 
