--- a/AvioProWeb/AvioProWeb/Views/Shared/Tapes_3mscotchweldepoxyadhesiveec3501ba.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/Tapes_3mscotchweldepoxyadhesiveec3501ba.cshtml
@@ -264,10 +264,14 @@
                                         <label class="col-sm-3 col-form-label">1 GALLON</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="63" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="63" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-3501", Brand="3M", Name="3M™ Scotch-Weld™ Epoxy Adhesive EC-3501 B/A", Units="1 GALLON" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
+
                                         </div>
                                     </div>
 
@@ -322,12 +326,16 @@
                                     <div class="form-group row mt-md-3 mb-md-3 mb-0">
                                         <label class="col-sm-3 col-form-label">1 PINT</label>
 
-                                        <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="63" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
-                                        </div>
+                                        @*<div class="col-sm-9">
+        <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="63" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                        <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-3501", Brand="3M", Name="3M™ Scotch-Weld™ Epoxy Adhesive EC-3501 B/A", Units="1 PINT" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                            <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                        </a>
+
+                                    </div>
                                     </div>
 
                                     <!-- Modal -->
@@ -382,10 +390,14 @@
                                         <label class="col-sm-3 col-form-label">250 ML TUBE</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="63" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="63" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-3501", Brand="3M", Name="3M™ Scotch-Weld™ Epoxy Adhesive EC-3501 B/A", Units="250 ML TUBE" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
+
                                         </div>
                                     </div>
 
