--- a/AvioProWeb/AvioProWeb/Views/Shared/Tapes_3mscotchweldurethaneadhesiveec3535ba.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/Tapes_3mscotchweldurethaneadhesiveec3535ba.cshtml
@@ -264,10 +264,13 @@
                                         <label class="col-sm-3 col-form-label">1 GALLON</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="47" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="47" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-3535", Brand="3M", Name="3M™ Scotch-Weld™ Urethane Adhesive EC-3535 B/A", Units="1 GALLON" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
                                         </div>
                                     </div>
 
@@ -323,10 +326,13 @@
                                         <label class="col-sm-3 col-form-label">1 PINT</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="47" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="47" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-3535", Brand="3M", Name="3M™ Scotch-Weld™ Urethane Adhesive EC-3535 B/A", Units="1 PINT" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
                                         </div>
                                     </div>
 
@@ -382,10 +388,13 @@
                                         <label class="col-sm-3 col-form-label">250 ML TUBE</label>
 
                                         <div class="col-sm-9">
-                                            <button type="submit" class="btn btn-red mb-2 font-12" data-product-id="47" data-toggle="modal" data-target="#exampleModal">
-                                                REQUEST A
-                                                QUOTE
-                                            </button>
+                                            @*<button type="submit" class="btn btn-red mb-2 font-12" data-product-id="47" data-toggle="modal" data-target="#exampleModal">
+            REQUEST A
+            QUOTE
+        </button>*@
+                                            <a id="btn_add" href="@Url.Action("AddCart", "Category" ,new { PartNumber="EC-3535", Brand="3M", Name="3M™ Scotch-Weld™ Urethane Adhesive EC-3535 B/A", Units="250 ML TUBE" })" class="btn btn-info btn-sm" style="margin-left:60px">
+                                                <span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart
+                                            </a>
                                         </div>
                                     </div>
 
