--- a/AvioProWeb/AvioProWeb/Views/Category/TurbineOil.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Category/TurbineOil.cshtml
@@ -27,7 +27,7 @@
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-3">AERO SHELL TURBINE OIL 3</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil3"})">AERO SHELL TURBINE OIL 3</a>
                                             </p>
 
                                             <p class="font-12">
@@ -36,7 +36,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-560">AERO SHELL TURBINE OIL 560</a>
+
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil560"})">AERO SHELL TURBINE OIL 560</a>
                                             </p>
 
                                             <p class="font-12">
@@ -45,7 +46,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-2eu">AERO SHELL TURBINE OIL 2(EU)</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-2eu">AERO SHELL TURBINE OIL 2(EU)</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil2EU"})">AERO SHELL TURBINE OIL 2(EU)</a>
                                             </p>
 
                                             <p class="font-12">
@@ -54,7 +56,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-2">AERO SHELL TURBINE OIL 2</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-2">AERO SHELL TURBINE OIL 2</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil2"})">AERO SHELL TURBINE OIL 2</a>
                                             </p>
 
                                             <p class="font-12">
@@ -63,7 +66,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-308">AERO SHELL TURBINE OIL 308</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-308">AERO SHELL TURBINE OIL 308</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil308"})">AERO SHELL TURBINE OIL 308</a>
                                             </p>
 
                                             <p class="font-12">
@@ -72,7 +76,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-390">AERO SHELL TURBINE OIL 390</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-390">AERO SHELL TURBINE OIL 390</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil390"})">AERO SHELL TURBINE OIL 390</a>
                                             </p>
 
                                             <p class="font-12">
@@ -81,7 +86,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-500">AERO SHELL TURBINE OIL 500</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-500">AERO SHELL TURBINE OIL 500</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil500"})">AERO SHELL TURBINE OIL 500</a>
                                             </p>
 
                                             <p class="font-12">
@@ -90,7 +96,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-555">AERO SHELL TURBINE OIL 555</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-555">AERO SHELL TURBINE OIL 555</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil555"})">AERO SHELL TURBINE OIL 555</a>
                                             </p>
 
                                             <p class="font-12">
@@ -99,7 +106,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-560">AERO SHELL TURBINE OIL 560</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-560">AERO SHELL TURBINE OIL 560</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil560"})">AERO SHELL TURBINE OIL 560</a>
                                             </p>
 
                                             <p class="font-12">
@@ -108,7 +116,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-750">AERO SHELL TURBINE OIL 750</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-750">AERO SHELL TURBINE OIL 750</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOil750"})">AERO SHELL TURBINE OIL 750</a>
                                             </p>
 
                                             <p class="font-12">
@@ -117,7 +126,8 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-ascender">AERO SHELL TURBINE OIL Ascender</a>
+                                                @*<a href="http://aviopro.ideabox.online/category/aeroshell-turbine-oil/product/aero-shell-turbine-oil-ascender">AERO SHELL TURBINE OIL Ascender</a>*@
+                                                <a href="@Url.Action("Index", "Product",new { Param="AeroTurbineOilAscender"})">AERO SHELL TURBINE OIL Ascender</a>
                                             </p>
 
                                             <p class="font-12">
