--- a/AvioProWeb/AvioProWeb/Views/brand/LPS.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/brand/LPS.cshtml
@@ -26,7 +26,7 @@
                                     <div class="row">
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/chainmate-chain--wire-rope-lubricant">ChainMate Chain &amp; Wire Rope Lubricant</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSChainMate"})">ChainMate Chain &amp; Wire Rope Lubricant</a>
                                             </p>
 
                                             <p class="font-12">
@@ -35,7 +35,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/dry-film-ptfe-lubricant">Dry Film PTFE Lubricant</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSPTFE"})">Dry Film PTFE Lubricant</a>
                                             </p>
 
                                             <p class="font-12">
@@ -44,7 +44,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/lps-1-greaseless-lubricant">LPS 1 Greaseless Lubricant</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSGreaseLess"})">LPS 1 Greaseless Lubricant</a>
                                             </p>
 
                                             <p class="font-12">
@@ -53,7 +53,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/lps-2-heavy-duty-lubricant">LPS 2 Heavy-Duty Lubricant</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSHeavyDuty"})">LPS 2 Heavy-Duty Lubricant</a>
                                             </p>
 
                                             <p class="font-12">
@@ -62,7 +62,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/lst-penetrant">LST Penetrant</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSPenetrant"})">LST Penetrant</a>
                                             </p>
 
                                             <p class="font-12">
@@ -78,7 +78,7 @@
                                     <div class="row">
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/lps-3-premier-rust-inhibitor">LPS 3 Premier Rust Inhibitor</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="Corrosion"})">LPS 3 Premier Rust Inhibitor</a>
                                             </p>
 
                                             <p class="font-12">
@@ -94,7 +94,7 @@
                                     <div class="row">
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/cfc-free-electro-contact-cleaner">CFC Free Electro Contact Cleaner</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSCFCCleaners"})">CFC Free Electro Contact Cleaner</a>
                                             </p>
 
                                             <p class="font-12">
@@ -103,7 +103,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/electro-140-contact-cleaner">Electro 140° Contact Cleaner</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPS140Cleaners"})">Electro 140° Contact Cleaner</a>
                                             </p>
 
                                             <p class="font-12">
@@ -112,7 +112,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/electro-contact-cleaner">Electro Contact Cleaner</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSElectroCleaners"})">Electro Contact Cleaner</a>
                                             </p>
 
                                             <p class="font-12">
@@ -121,7 +121,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/noflash-electro-contact-cleaner">NoFlash Electro Contact Cleaner</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPSNoFlashCleaners"})">NoFlash Electro Contact Cleaner</a>
                                             </p>
 
                                             <p class="font-12">
@@ -130,7 +130,7 @@
                                         </div>
                                         <div class="col-lg-12 col-md-12">
                                             <p class="font-14 mb-0">
-                                                <a href="http://aviopro.ideabox.online/brand/lps/product/noflash-20-electro-contact-cleaner">NoFlash 2.0 Electro Contact Cleaner</a>
+                                                <a href="@Url.Action("Index", "Product",new { Param="LPS2NoFlashCleaners"})">NoFlash 2.0 Electro Contact Cleaner</a>
                                             </p>
 
                                             <p class="font-12">
