--- a/AvioProWeb/AvioProWeb/Views/Shared/Aero_TurbineOil_555.cshtml
+++ b/AvioProWeb/AvioProWeb/Views/Shared/Aero_TurbineOil_555.cshtml
@@ -18,7 +18,7 @@
                         <div class="col col-12 col-md-3 col-lg-3 pl-0 pl-md-0 pr-0 pr-md-3 ">
                             <div class="bg-light-gray mb-3 p-3">
                                 <p class="font-14 mb-0">OTHER PRODUCTS BY </p>
-                                <img src="./AERO SHELL TURBINE OIL 555_files/3854-aeroshell-logo.png" class="img-fluid" alt="Aeroshell" title="Aeroshell">
+                                <img src="~/images/3854-aeroshell-logo.png" class="img-fluid" alt="Aeroshell" title="Aeroshell">
                             </div>
                             <div class="bg-light-gray mb-5">
                                 <div class="container p-0">
@@ -185,7 +185,7 @@
 
                                 <div class="row row-eq-height">
                                     <div class="col-12 col-md-5 mb-4 mb-md-0">
-                                        <img src="./AERO SHELL TURBINE OIL 555_files/1898-AERO SHELL TURBINE OIL 555 (24 X 1USQ).jpg" title="AERO SHELL TURBINE OIL 555" alt="AERO SHELL TURBINE OIL 555" class="w-100">
+                                        <img src="~/images/upload/FeaturedImages/1898-AERO SHELL TURBINE OIL 555 (24 X 1USQ).jpg" title="AERO SHELL TURBINE OIL 555" alt="AERO SHELL TURBINE OIL 555" class="w-100">
                                     </div>
                                     <div class="col-12 col-md-7 p-md-5 d-flex align-items-center">
                                     </div>
